# tiny-bip39

./: .gitignore  Cargo.toml
C++/: Makefile  libbip39.h  main.cpp  readme.txt
src/: crypto.rs  error.rs  language.rs  lib.rs  mnemonic.rs  mnemonic_type.rs  seed.rs  util.rs
