[package]
name = "tiny-bip39"
version = "1.0.1"
authors = [
    "Stephen Oliver <steve@infincia.com>",
    "Maciej Hirsz <hello@maciej.codes>",
]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/maciejhirsz/tiny-bip39/"
repository = "https://github.com/maciejhirsz/tiny-bip39/"
readme = "README.md"
description = "A fork of the bip39 crate with fixes to v0.6. Rust implementation of BIP-0039"
documentation = "https://docs.rs/tiny-bip39"
keywords = ["bip39", "bitcoin", "mnemonic"]
edition = "2018"

[lib]
name = "bip39"
path = "src/lib.rs"

[features]
chinese-simplified = []
chinese-traditional = []
# Note: English is the standard for bip39 so always included
french = []
italian = []
japanese = []
korean = []
spanish = []
default-langs = [
	"chinese-simplified",
	"chinese-traditional",
	"french",
	"italian",
	"japanese",
	"korean",
	"spanish",
]
default = [ "default-langs", "rand", "std" ]
std = ["sha2/std",  "anyhow/std", "rustc-hash/std", "unicode-normalization/std" ]


[dependencies]
anyhow = {version = "1.0.57", default-features = false }
rustc-hash = { version = "1.1.0", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
hmac = "0.12.1"
pbkdf2 = { version = "0.11.0", default-features = false }
rand = { version = "0.8.5", optional = true }
unicode-normalization = { version = "0.1.19", default-features = false }
zeroize = { version = "1.5.5", features = ["zeroize_derive"] }
lazy_static = { version = "1.4.0", default-features = false, features = [ "spin_no_std" ] }

[dev-dependencies]
hex = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
